# cltrier_prosem

./: Makefile  README.md  pyproject.toml
examples/: 0.1--Data-Preparation.ipynb  0.2--Pipeline-Application.ipynb  0.3--Embed-Usage.ipynb
examples/data/: dataset.raw.csv
examples/data/dataset/: test.parquet  train.parquet
examples/results/: embeds.test.parquet  metric.classification_report.csv  metric.cross_tabulation.csv  metric.train.csv
notebooks/: 0.1-Test-Pipeline.ipynb
src/: __main__.py  classifier.py  cli.py  dataset.py  encoder.py  metric.py  tscloss.py  util.py
src/cltrier_prosem/: __init__.py  __main___.py  _config.py  classifier.py  cli.py  encoder.py  metric.py  pooler.py  trainer.py
src/cltrier_prosem/_generics/: __init__.py  cli.py  dataset.py  util.py
src/cltrier_prosem/_generics/nn/: __init__.py  encoder.py  mlp.py
src/cltrier_prosem/_generics/trainer/: __init__.py  metric.py  progress.py
tests/: test_notebook.ipynb  test_pipeline.py
tests/data/: test.parquet  train.parquet
