[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name =  "cltrier_prosem"
authors = [
    {name = "Simon Münker", email = "muenker@uni-trier.com"},
]
dynamic = ["version", "description"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.10"
