[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cltrier_prosem"
authors = [
    { name = "Simon Münker", email = "muenker@uni-trier.de" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.10"
dependencies = [
    "jsonlines>=4.0.0",
    "tomli>=2.0.1",
    "pyarrow>=13.0.0",
    "pydantic>=2.5.2",
    "tqdm>=4.66.1",
    "numpy>=1.25.2",
    "pandas>=2.1.0",
    "torch>=2.0.1",
    "transformers>=4.32.1",
    "datasets>=1.16.1",
    "matplotlib>=3.2.1",
    "seaborn>=0.12.2",
    "scikit-learn>=1.0.1",
]
dynamic = ["version", "description"]

[project.urls]
homepage = "https://github.com/smnmnkr/cltrier_prosem"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning"
]
